Lenovo Ideapad 320, Checkin Timestamp :: %date%-%time%

--- a/technical/Nigel-Poulton-Docker-k8s-big-picture.adoc
+++ b/technical/Nigel-Poulton-Docker-k8s-big-picture.adoc
@@ -149,11 +149,11 @@ Now, and I'm going to keep this is brief and as high level as I can cause it can
 
 On the one hand, we can take our legacy apps, heritage apps, call them what you want. But we could take them without changing them and run them on virtual machines. Magic? Migrations literally couldn't have been easier, and now utilization was better. And you know what? Yeah, that's good. It's certainly better than not doing it, but it's not truly great. I mean, think about it. It did precious little to help make apps any better. And IT is supposed to be about the app, right? I mean, let's face it. All we were doing was taking our crappy old apps and just not having them be is wasteful, which I get it. I mean, it means there's less waste of business capital or whatever. But it hasn't helped us make our businesses more agile and flexible, at least not noticeably. Well, containers and, yes, we kind of can do the same sometimes, so lift our old code and drop it straight into containers. But containers bring so much more to the table. So like when we come to containerize our apps, we really should be rethinking and refactoring them because like we said, business requirements have changed, and with clouds and containers, we've got everything we need now to build much better apps. And really, I am not talking about just better for IT or for me as a techie. I'm genuinely talking about better for the business and better for the customer. Noticeably better. But this too is a two‑edged sword. On the one hand, we're starting to develop and deliver new, modern, scalable, self‑healing, portable apps. But on the other hand, we are having to develop, and I'm sure you get it, modern, scalable, self‑healing, portable apps. The point is, yes, it's the way forward, and, yes, we absolutely want to do business on those kinds of terms. But yeah, it takes pain and effort to get there. Only check it out right on the effort front, there is low‑hanging fruit, and that's your new or your greenfield apps, and it's anything stateless. I mean, Docker in containers has done stateless since day 1 and Kubernetes as well, and it's a perfect fit. And because it's so easy, it's usually where people start. But it really is only the start. There's a way bigger picture. So let's switch tack now and talk about stateful.
 
-*State & Legacy Apps*
+==== State & Legacy Apps
 
-Okay, like we've said, Docker and Kubernetes are absolutely magic when it comes to stateless workloads. But when we say that, it could be misconstrued to imply, and it often has been right, that they are not good for stateful or traditional apps, which, let's be fair, is still the staple of most enterprises. Well, the good news is it is not true that containers can't do stateful or even traditional heritage apps. You know what? It was just that these kinds of workloads are harder, and I think is as the case with just about anything that's new, the easy stuff gets done first. But guess what? Containers are not new anymore. This stuff is growing up fast. And as Docker and Kubernetes have matured, they've added this stuff that's needed for stateful and traditional apps. I mean, on the Docker technology front, volumes and persistent storage, that's come on leaps and bounds and the same for Kubernetes. It's got a pretty comprehensive persistent storage subsystem. Now, while we're on with Kubernetes, it's also got a ton of other features and objects for stateful services. So things like the Kubernetes deployment object, that's great for stateless work, and don't stress if some of the terminology is new here, right? The point is, Kubernetes has and probably always has had this stuff for stateless workloads. But on the stateful front, well as well as things like persistent storage, there's stateful sets and other stuff, all of which are core to Kubernetes. Now we're high level here, so I'm sparing you the detail. But the point is the primitives and the objects and everything else necessary, integrations into external storage systems, you name it, it's all there so you can do stateful work. So Docker and Kubernetes definitely does stateful. Now on the legacy or heritage application front, if you're not ready to refactor your apps, but maybe you do want to move to a container platform, well at least one example of which there are others, but Docker Inc for an age now has had its modernizing traditional apps program where they make it super simple, just a *lift and shift* some of your legacy apps into containers. Now it's not an end goal in and of itself, but it is a step 1 in getting onto a modern container platform. So look, we're a big picture course, and I don't want to bamboozle you with detail. The take‑home point is that Docker and Kubernetes as technologies have advanced massively. And since at the very least 2018 and even earlier, they've had the tools to deal with state and the more difficult workloads. Brilliant. Alright, let's recap.
+Okay, like we've said, Docker and Kubernetes are absolutely magic when it comes to stateless workloads. But when we say that, it could be misconstrued to imply, and it often has been right, that they are not good for stateful or traditional apps, which, let's be fair, is still the staple of most enterprises. Well, the good news is it is not true that containers can't do stateful or even traditional heritage apps. You know what? It was just that these kinds of workloads are harder, and I think is as the case with just about anything that's new, the easy stuff gets done first. But guess what? Containers are not new anymore. This stuff is growing up fast. And as Docker and Kubernetes have matured, they've added this stuff that's needed for stateful and traditional apps. I mean, on the Docker technology front, volumes and persistent storage, that's come on leaps and bounds and the same for Kubernetes. It's got a pretty comprehensive persistent storage subsystem. Now, while we're on with Kubernetes, it's also got a ton of other features and objects for stateful services. So things like the Kubernetes deployment object, that's great for stateless work, and don't stress if some of the terminology is new here, right? The point is, Kubernetes has and probably always has had this stuff for stateless workloads. But on the stateful front, well as well as things like persistent storage, there's stateful sets and other stuff, all of which are core to Kubernetes. Now we're high level here, so I'm sparing you the detail. But the point is the primitives and the objects and everything else necessary, integrations into external storage systems, you name it, it's all there so you can do stateful work. *So Docker and Kubernetes definitely does stateful*. Now on the legacy or heritage application front, if you're not ready to refactor your apps, but maybe you do want to move to a container platform, well at least one example of which there are others, but Docker Inc for an age now has had its modernizing traditional apps program where they make it super simple, just a *lift and shift* some of your legacy apps into containers. Now it's not an end goal in and of itself, but it is a step 1 in getting onto a modern container platform. So look, we're a big picture course, and I don't want to bamboozle you with detail. The take‑home point is that Docker and Kubernetes as technologies have advanced massively. And since at the very least 2018 and even earlier, they've had the tools to deal with state and the more difficult workloads. Brilliant. Alright, let's recap.
 
-*Recap*
+==== Recap
 
 Okay, so I feel like we've done a bit of jumping around in this module, so I want to give a coherent summary. At the end of the day, technology is always about either the business or the project. And modern businesses and projects need to morph and grow and deal easily with change. So it stands to reason that our technologies need to do the same. Like if our tech can't adapt and grow, then our businesses have got no chance. No sweat, though. We're living in a golden age of technology where we've got all the tools we need. I mean cloud platforms are providing us with things like infrastructure on demand, while Docker and Kubernetes give us the tools to build agile, scalable apps. So dynamic infrastructure and tools to build dynamic apps, and I mean entire apps. So we've talked a bit about modern cloud‑native apps, yeah. You know how we tend to build a useful app from lots of small parts that work together. Now, early in the days of Docker, we really only had the tools to build the stateless parts of the app. For the persistent stuff, we'd still go to VMs. Well, these days we can do the whole lot in containers. Docker and Kubernetes are both beyond the tipping point where it's feasible to run entire application stacks in containers, stateful and all. Now in saying that, I'm not saying that we have to do it that way. In fact, a lot of the time we're actually going to be seeing application stacks that consist of containers, VMs, functions, and no doubt whatever else comes along, which is fine. And chances are Kubernetes is going to manage the whole stack. Also right, as well as this modern cloud‑native stuff, you can if you so desire, lift and shift some of your legacy apps straight into containers. We said Docker, Inc. offers this Modernize Traditional Apps program, and they're not the only ones. But you can literally left some of your older apps out of virtual machines and physicals into containers. So there's choice. And with Docker and Kubernetes, you can pretty much do most things. I mean, yeah, there's a learning curve, of course, and you need strategies to tackle it. But we've talked about that in the previous set of lessons. And you know what, though, despite the effort required, for the sake of your career and your business, you should be starting to do this. I mean, if we go back to our video rental store analogy, and we're wrapping up on this point, okay, but even Netflix, if I remember right, started out by posting DVDs to your letterbox. My guess is they saw that the old video store on the high street or strip mall was dying out, so they started offering a postal service where you'd rent a movie and they would post it to you. But as an organization, they were open to admitting the flaws in their product, and they changed their business to streaming content, and I guess they've not looked back since. Now, look, of course, I admit that Netflix isn't a perfect analogy for a lot of businesses, but their willingness to adapt and change probably is. I mean, I see banks and the likes that I used to work for rebranding and reengineering themselves pretty much as software companies. And they're willing to change the old models. And on the technology front, they're doing it with containers using Docker and Kubernetes. So, yeah, containers. They're great for new modern apps, the stateless and stateful bits. And they're also an option for some of your older heritage apps, and they can totally sit alongside VMs and functions within the same app. And on that note, we're done on this topic. Coming up next, we're going to talk about whether this stuff is for the enterprise or just for startups.
 
